pilot/pkg/config/kube/gateway/testdata/multigateway.yaml
apiVersion: networking.x-k8s.io/v1alpha1
kind: GatewayClass
metadata:
  name: istio
spec:
  controller: istio.io/gateway-controller
  parametersRef:
    group: core
    kind: ConfigMap
    name: istio-gateway-class
    scope: Namespace
    namespace: istio-system
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: GatewayClass
metadata:
  name: istio-cluster-local
spec:
  controller: istio.io/gateway-controller
  parametersRef:
    group: core
    kind: ConfigMap
    name: istio-cluster-local-gateway-class
    scope: Namespace
    namespace: istio-system
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
  - port: 34000
    protocol: TCP
    routes:
      namespaces:
        from: All
      kind: TCPRoute
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: Gateway
metadata:
  name: cluster-local-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio-cluster-local
  listeners:
  - port: 34000
    protocol: TCP
    routes:
      namespaces:
        from: All
      kind: TCPRoute
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: TCPRoute
metadata:
  name: tcp
  namespace: default
  labels:
    selected: "yes"
spec:
  gateways:
    allow: FromList
    gatewayRefs:
    - name: cluster-local-gateway
      namespace: istio-system
    - name: ingress-gateway
      namespace: istio-system
  rules:
  - forwardTo:
    - serviceName: httpbin
      port: 9090
